Adicionando classe turmas e criando no cosmos
