# microservmatricula/server/api/controllers/turmas/router.ts
@@ -1,0 +1,6 @@
+import express from 'express';
+import controller from './turmacontroller';
+
+export default express
+    .Router()
+    .post('/event', controller.updateEvent);
